added authentication, switched to virtual threads